--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотоип Яндекса">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="header__link" src="#">Узнать →</a>
+        <a class="header__link" href="">Узнать →</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Картина 'Опять двойка'">
       <div class="header__square-pic"></div>
@@ -126,22 +126,34 @@
       <div class="footer__columns">
         <div class="footer__column_coopyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg">
-          <p class="footer__author">Юля-Красотуля</p>
+          <p class="footer__author"> &copy Юля-Красотуля</p>
         </div>
         <nav class="footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="column__links">
-            <li> <a class="column__link">Главная</a></li>
-            <li> <a class="column__link">Концепция </a></li>
-            <li> <a class="column__link">Наставники </a></li>
+            <li> <a class="column__link" href="">Главная</a></li>
+            <li> <a class="column__link" href="">Концепция </a></li>
+            <li> <a class="column__link" href="">Наставники </a></li>
           </ul>
         </nav>
         <nav class="footer__column_content_social">
-          <h4 class="footer__column-heading"></h4>
-          <ul class="footer__social-icon">
-            <li class="column__link"></li>
-            <li class="column__link"></li>
-            <li class="column__link"></li>
+          <h4 class="footer__column-heading">Соцсети</h4>
+          <ul class="column__links">
+            <li>
+              <a class="column__link" href="">
+                <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="значок Фейсбук">
+                Facebook</a>
+            </li>
+           <li>
+            <a class="column__link" href="">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="значок ВКонтакте">
+              ВКонтакте</a>
+           </li>
+           <li>
+            <a class="column__link" href="">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="значок Инстаграм">
+              Instagram</a>
+           </li>
           </ul>
         </nav>
       </div>
