--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_coopyright">
-          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотоип Яндекса">
           <p class="footer__author"> &copy Юля-Красотуля</p>
         </div>
         <nav class="footer__column_content_info">
