--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" />
+            <img class="cards__image" src="./images/cards-attention.png" alt="Два вида внимания" />
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">
               Глубокие знания возникают, если чередовать сфокусированное и
@@ -63,7 +63,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" />
+            <img class="cards__image" src="./images/cards-recall.png" alt="Recall"/>
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции
@@ -71,14 +71,14 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" />
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Интерливинг" />
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">
               Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" />
+            <img class="cards__image" src="./images/cards-question.png" alt="Вопросы"/>
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос, который вас
@@ -86,7 +86,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" />
+            <img class="cards__image" src="./images/cards-competence.png" alt="Иллюзия компетентности" />
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только
@@ -190,7 +190,7 @@
           <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/khan-book.jpg">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги 'Весь мир - школа. Преобразованное образование' автора Салмана Хана.">
             <a class="khan__buy-link" href="#">Купить книгу  →</a>
           </div>
         </div>
@@ -271,16 +271,16 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resourses__logo-zone">
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-arzamas.svg"> </a>
+            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас"> </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-n1.svg"> </a>
+            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-n1.svg" alt="N1"> </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-strelka.svg"> </a>
+            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-strelka.svg" alt="Strelka"> </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-polka.svg"> </a>
+            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-polka.svg" alt="Polka"> </a>
           </li>
         </ul>
       </section>
