--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Recall"/>
+            <img class="cards__image" src="./images/cards-recall.png" alt="Повторение изученного"/>
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции
@@ -274,13 +274,13 @@
             <a href="#"> <img class="resourses__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас"> </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-n1.svg" alt="N1"> </a>
+            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-n1.svg" alt="H1"> </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-strelka.svg" alt="Strelka"> </a>
+            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка"> </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-polka.svg" alt="Polka"> </a>
+            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-polka.svg" alt="Полка"> </a>
           </li>
         </ul>
       </section>
