--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <a href="#"> <img class="resourses__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас"> </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-n1.svg" alt="H1"> </a>
+            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-n1.svg" alt="Сайт Н1"> </a>
           </li>
           <li>
             <a href="#"> <img class="resourses__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка"> </a>
