--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" alt="Два вида внимания" />
+            <img
+              class="cards__image"
+              src="./images/cards-attention.png"
+              alt="Два вида внимания"
+            />
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">
               Глубокие знания возникают, если чередовать сфокусированное и
@@ -63,7 +67,11 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Повторение изученного"/>
+            <img
+              class="cards__image"
+              src="./images/cards-recall.png"
+              alt="Повторение изученного"
+            />
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
               Вспоминайте изученное — это позволит соединить разрозненные порции
@@ -71,14 +79,22 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt="Интерливинг" />
+            <img
+              class="cards__image"
+              src="./images/cards-interliving.png"
+              alt="Интерливинг"
+            />
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">
               Изучайте несколько навыков одновременно, они обогащают друг друга.
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt="Вопросы"/>
+            <img
+              class="cards__image"
+              src="./images/cards-question.png"
+              alt="Вопросы"
+            />
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос, который вас
@@ -86,7 +102,11 @@
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="Иллюзия компетентности" />
+            <img
+              class="cards__image"
+              src="./images/cards-competence.png"
+              alt="Иллюзия компетентности"
+            />
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу: вам только
@@ -185,13 +205,22 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          <p class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+            студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+            всем, кто занимается образованием — так учащиеся повсюду смогут
+            получить навыки и знания, которые приносят успех в школе, карьере и
+            жизни.
           </p>
           <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги 'Весь мир - школа. Преобразованное образование' автора Салмана Хана.">
-            <a class="khan__buy-link" href="#">Купить книгу  →</a>
+            <img
+              class="khan__book-pic"
+              src="./images/khan-book.jpg"
+              alt="Обложка книги 'Весь мир - школа. Преобразованное образование' автора Салмана Хана."
+            />
+            <a class="khan__buy-link" href="#">Купить книгу →</a>
           </div>
         </div>
       </section>
@@ -268,19 +297,45 @@
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <p class="section-subtitle">
+          Больше материалов о техниках и лайфхаках обучения
+        </p>
         <ul class="resourses__logo-zone">
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас"> </a>
+            <a href="#">
+              <img
+                class="resourses__logo"
+                src="./images/logo/resources-arzamas.svg"
+                alt="Арзамас"
+              />
+            </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-n1.svg" alt="Сайт Н1"> </a>
+            <a href="#">
+              <img
+                class="resourses__logo"
+                src="./images/logo/resources-n1.svg"
+                alt="Сайт Н1"
+              />
+            </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка"> </a>
+            <a href="#">
+              <img
+                class="resourses__logo"
+                src="./images/logo/resources-strelka.svg"
+                alt="Стрелка"
+              />
+            </a>
           </li>
           <li>
-            <a href="#"> <img class="resourses__logo" src="./images/logo/resources-polka.svg" alt="Полка"> </a>
+            <a href="#">
+              <img
+                class="resourses__logo"
+                src="./images/logo/resources-polka.svg"
+                alt="Полка"
+              />
+            </a>
           </li>
         </ul>
       </section>
