--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
         <p class="section-subtitle">
           Больше материалов о техниках и лайфхаках обучения
         </p>
-        <ul class="resourses__logo-zone">
+        <ul class="resources__logo-zone">
           <li>
             <a href="#">
               <img
-                class="resourses__logo"
+                class="resources__logo"
                 src="./images/logo/resources-arzamas.svg"
                 alt="Арзамас"
               />
@@ -313,7 +313,7 @@
           <li>
             <a href="#">
               <img
-                class="resourses__logo"
+                class="resources__logo"
                 src="./images/logo/resources-n1.svg"
                 alt="Сайт Н1"
               />
@@ -322,7 +322,7 @@
           <li>
             <a href="#">
               <img
-                class="resourses__logo"
+                class="resources__logo"
                 src="./images/logo/resources-strelka.svg"
                 alt="Стрелка"
               />
@@ -331,7 +331,7 @@
           <li>
             <a href="#">
               <img
-                class="resourses__logo"
+                class="resources__logo"
                 src="./images/logo/resources-polka.svg"
                 alt="Полка"
               />
