--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">
+          <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов
             студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
             всем, кто занимается образованием — так учащиеся повсюду смогут
             получить навыки и знания, которые приносят успех в школе, карьере и
             жизни.
-          </p>
+          </blockquote>
           <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
@@ -302,7 +302,7 @@
         </p>
         <ul class="resources__logo-zone">
           <li>
-            <a href="#">
+            <a class="resources__link" href="#">
               <img
                 class="resources__logo"
                 src="./images/logo/resources-arzamas.svg"
@@ -311,7 +311,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="resources__link" href="#">
               <img
                 class="resources__logo"
                 src="./images/logo/resources-n1.svg"
@@ -320,7 +320,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="resources__link" href="#">
               <img
                 class="resources__logo"
                 src="./images/logo/resources-strelka.svg"
@@ -329,7 +329,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="resources__link" href="#">
               <img
                 class="resources__logo"
                 src="./images/logo/resources-polka.svg"
@@ -342,7 +342,7 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_coopyright">
+        <div class="footer__column footer__column_content_coopyright">
           <img
             class="logo logo_place_footer"
             src="./images/logo_place_footer.svg"
@@ -350,16 +350,14 @@
           />
           <p class="footer__author">&copy; Юля-Красотуля</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
-          <nav>
-            <ul class="footer__column-links">
-              <li><a class="footer__column-link" href="#">Главная</a></li>
-              <li><a class="footer__column-link" href="#">Концепция </a></li>
-              <li><a class="footer__column-link" href="#">Наставники </a></li>
-            </ul>
-          </nav>
-        </div>
+          <ul class="footer__column-links">
+            <li><a class="footer__column-link" href="#">Главная</a></li>
+            <li><a class="footer__column-link" href="#">Концепция </a></li>
+            <li><a class="footer__column-link" href="#">Наставники </a></li>
+          </ul>
+        </nav>
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <nav>
